lab 6 - on complete of part3